# General_project

./: .env.template  .gitignore  .test.env  create_app.py  docker-compose.yaml  main.py  pyproject.toml  pytest.ini  start-celery.sh
backend/: alembic.ini  comment.text  create_app.py  crude.py  main.py  redis.conf
backend/alembic/: env.py
backend/alembic/versions/: 205cc1e19b44_added_table_posts.py  50234b7e608d_initial_revision.py  56590931d5a4_deleted_fields_tags_title.py  69757955b30c_added_image.py  6c1b4168be2a_return_table_tags.py  783972503e8b_added_post_tag_models.py  9abe092df65d_added_cascade_deleted_for_post.py  9ca89511aeea_deleted_fields_tags_title.py  ee5d07e0784a_fixed_field_content.py  f5990ced5cd5_added_avatar.py  f59b51a97910_initional.py  (+1 more)
backend/auth/: __init__.py  authorization.py  main.py  redis_client.py  registration_user.py  router.py  routers.py  token_cookie_service.py  tokens_service.py
backend/comments/: schemas.py  views.py
backend/core/: base_repository.py  base_service.py  common_dependencies.py  config.py  middleware.py  template_manager.py
backend/likes/: like_router.py  services.py
backend/posts/: dependencies.py  post_repository.py  schemas.py  services.py  views.py
backend/redis-data/: dump.rdb
backend/users/: dependencies.py  password_helper.py  repository.py  schemas.py  services.py  tokens.py  utils.py  views.py
backend/utils/: __init__.py  enums.py  save_images.py  validated.py
frontend/templates/: index.html
tests/: conftest.py
tests/integration/: test_views.py
tests/unit/: test_model_user.py
(+56 files in other folders)
